--- a/app/containers/PanelContainer.css
+++ b/app/containers/PanelContainer.css
@@ -1,6 +1,6 @@
 .panelContainer {
+  width: 100%;
   display: flex;
   flex: 1;
   flex-direction: row;
 }
-
