--- a/app/containers/SideBar.css
+++ b/app/containers/SideBar.css
@@ -2,6 +2,7 @@
   height: 100%;
   width: 200px;
   display: flex;
+  flex: 0 0 200px;
   overflow-y: scroll;
   overflow-x: hidden;
   margin: 5px;
